--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="contact_experts">Contact Experts</string>
     <string name="about_ke_ntds">About KE-NTDs</string>
     <string name="meet_our_experts">Meet Our Experts</string>
+    <string name="location">Location</string>
+    <string name="case_type">Case type</string>
+    <string name="select_mobility">Mobility status</string>
 </resources>
